--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,8 +1,15 @@
 <%= form_with url: "/users", method: :post, local: true do |form| %>
   <%= form.label :name %>
-  <%= form.text_field :name %>
+  <%= form.text_field :name, required: true %>
 
   <%= form.label :email %>
-  <%= form.text_field :email %>
+  <%= form.text_field :email, required: true %>
+
+  <%= form.label :password %>
+  <%= form.password_field :password, required: true  %>
+
+  <%= form.label :password_confirmation  %>
+  <%= form.password_field :password_confirmation, required: true  %>
+
   <%= form.submit 'Create New User' %>
 <% end %>
