--- a/app/views/application/welcome.html.erb
+++ b/app/views/application/welcome.html.erb
@@ -1,6 +1,6 @@
 <h1>Viewing Party Light</h1>
 <%= button_to 'Create a New User', '/register', method: :get %>
-
+<%= link_to "Log In", '/login' %>
 <p>Existing Users:</p>
 <% @users.each do |user| %>
   <%= link_to "#{user.email}", "/users/#{user.id}" %>
