Finish up stuff

--- a/app/views/application/welcome.html.erb
+++ b/app/views/application/welcome.html.erb
@@ -1,7 +1,15 @@
 <h1>Viewing Party Light</h1>
-<%= button_to 'Create a New User', '/register', method: :get %>
-<%= link_to "Log In", '/login' %>
-<p>Existing Users:</p>
-<% @users.each do |user| %>
-  <%= link_to "#{user.email}", "/users/#{user.id}" %>
+
+<% if session[:user_id] %>
+  <%= link_to "Log Out", '/logout', method: :delete %>
+<% else %>
+  <%= button_to 'Create a New User', '/register', method: :get %>
+  <%= link_to "Log In", '/login' %>
+<% end %>
+<%if session[:user_id] %>
+
+  <p>Existing Users:</p>
+  <% @users.each do |user| %>
+    <%= user.email %>
+  <% end %>
 <% end %>
